test añadidos para pruebas unitarias de recurso installtion y repository. También añadidas pruebas de integración para recurso installation
